this is html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    This is first 
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, corporis?</p>
 </body>
 </html>
